[#590] Fixed 0 width container on mobile due to xs breakpoint of 0 width. (#589)

--- a/packages/twig/components/00-base/mixins/_grid.scss
+++ b/packages/twig/components/00-base/mixins/_grid.scss
@@ -26,14 +26,18 @@
 
     // Use vw instead of % so it calculates on viewport and not parent container.
     & {
-      max-width: max(calc(100vw - #{$_width}), 0);
+      max-width: calc(100vw - #{$_width});
     }
 
     // Set width for container at each breakpoint accounting for offsets at this
     // breakpoint.
     @each $bp, $value in $ct-breakpoints {
       @include ct-breakpoint($bp) {
-        max-width: max(map.get($ct-breakpoints, $bp) - (map.get($ct-grid-offsets, $bp) * 2), 0);
+        $bp-width: map.get($ct-breakpoints, $bp);
+
+        @if $bp-width > 0 {
+          max-width: max($bp-width - (map.get($ct-grid-offsets, $bp) * 2), 0);
+        }
       }
     }
   }
